app/src/main/java/com/gdavidpb/test/domain/usecase/errors/LikeArtistError.kt
package com.gdavidpb.test.domain.usecase.errors

sealed class LikeArtistError {
    class NoConnection(val isNetworkAvailable: Boolean) : LikeArtistError()
}